<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_20dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_push_notifications"
            android:checked="true"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_email_notifications"
            android:layout_marginTop="@dimen/pad_20dp"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_message_preview"
            android:layout_marginTop="@dimen/pad_20dp"
            android:checked="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sounds_for_incoming_messages"
            android:layout_marginTop="@dimen/pad_20dp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ring_on_incoming_calls"
            android:layout_marginTop="@dimen/pad_20dp"
            android:checked="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_emoji"
            android:layout_marginTop="@dimen/pad_20dp"
            android:checked="true" />

    </LinearLayout>
</ScrollView>