<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/pad_10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editext_white"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:hint="@string/hint_old_password"
        android:id="@+id/oldPassword"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editext_white"
        android:inputType="textPassword"
        android:hint="@string/hint_new_password"
        android:textAlignment="center"
        android:id="@+id/newPassword"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/pad_10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editext_white"
        android:inputType="textPassword"
        android:hint="@string/hint_repeat_password"
        android:textAlignment="center"
        android:id="@+id/repeatedPassword"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/pad_10dp"/>

    <Button
        android:id="@+id/buttonChangePassword"
        style="@style/btn_white_large"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/change_pwd_button"
        android:layout_marginTop="@dimen/pad_15dp" />

    <!--<Button-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="80px"-->
        <!--android:id="@+id/chgbtn"-->
        <!--android:background="@drawable/btn_back"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textAlignment="center"-->
        <!--android:text="Change Password"/>-->
    <!--<Button-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="80px"-->
        <!--android:layout_marginTop="10px"-->
        <!--android:layout_marginBottom="40px"-->
        <!--android:id="@+id/cancelbtn"-->
        <!--android:background="@drawable/btn_blue_back"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textAlignment="center"-->
        <!--android:text="Cancel"/>-->
</LinearLayout>