<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/conversation_avatar"
        android:src="@drawable/default_conversation_avatar"
        android:layout_width="@dimen/conversation_img_size"
        android:layout_height="@dimen/conversation_img_size"
        android:scaleType="centerCrop"
        android:contentDescription="@string/room_content_description"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/conversation_img_size">

        <TextView
            android:id="@+id/conversation_name"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp"
            android:text="@string/conversation_default_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:drawablePadding="@dimen/pad_10dp"
            />

        <TextView
            android:id="@+id/conversation_description"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/pad_5dp"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingLeft="@dimen/pad_10dp"
            android:paddingRight="@dimen/pad_10dp"
            android:text="@string/conversation_default_description"
            android:textColor="@color/primaryTextColor"
            android:textSize="12sp"
            android:drawablePadding="@dimen/pad_5dp"
            />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/conversation_count_unread_messages"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/conversation_img_size">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:paddingTop="@dimen/pad_badge_vertical"-->
            <!--android:paddingBottom="@dimen/pad_badge_vertical"-->
            <!--android:paddingLeft="@dimen/pad_badge_horizontal"-->
            <!--android:paddingRight="@dimen/pad_badge_horizontal"-->
            <!--android:background="@color/badge_bg"-->
            <!--android:textSize="20sp"-->
            <!--android:text="+12"/>-->
    <!--</LinearLayout>-->
</LinearLayout>